# umk_lectures_paw_2026_lab

./: .gitignore  README.md
.github/workflows/: build.yml  deploy-audit-log-service.yml  deploy-offers-dev.yml  deploy-offers-service.yml  deploy-prod.yml  deploy-product-review-service-feature.yml  deploy-product-review-service.yml  deploy-products-service.yml  deploy-purchase-service.yml  deploy.yml
.teaching/tydzien6/: zadanie_6_2.md
.teaching/tydzien7/: java-springboot-guide.md
falkowskisz01/infrastructure/: variables.tf
infra/: main.tf  offer-service.tf  offers-service.tf  outputs.tf  purchase-service.tf  user-service.tf  variables.tf
infrastructure/: outputs.tf  purchase_service.tf  symfony_offers.tf  symfony_purchase.tf  variables.tf
instrastructure/: main.tf  outputs.tf  variables.tf
integ-tests/: test_audit_logs.py  test_offers.py  test_users.py
kmuchewicz/: .env  .env.dev  .gitignore  Makefile  composer.json  docker-compose.yml
mini-allegro/: .env  composer.json  docker-compose.yml
prompts/: new-microservice-infra.prompt.md
scripts/: local-app.ps1  local-app.sh  local-products-docker.sh  local-products-service.sh  quick-dev-loop.sh
services/user-service/: .dockerignore  Dockerfile  README.md  SETUP.md  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  run-local.sh
services/user-service/src/: main.py
services/user-service/tests/: test_main.py
symfony-offers/: .env  .env.dev  .gitignore  Dockerfile  composer.json  docker-compose.yml  docker-entrypoint.sh
symfony-purchase/: .env
(+164 files in other folders)
