[project]
name = "user-service"
version = "0.1.0"
description = "User microservice for mini-allegro - FastAPI + Neo4J"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "neo4j>=5.20.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
